# NRF54L15-Arduino-core

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  install_linux.sh  install_windows.bat  package_nrf54l15_baremetal_index.json  package_nrf54l15_index.json  package_nrf54l15_zephyr_based_index.json  upload.sh
hardware/nrf54l15/nrf54l15/: CMakeLists.txt  LICENSE  README.md  boards.txt  platform.txt
hardware/nrf54l15/nrf54l15/cores/nrf54l15/: Arduino.h  HardwareSerial.cpp  HardwareSerial.h  SPI.cpp  Wire.cpp  Wire.h  main.cpp  nrf54l15.h  soc.h  startup_nrf54l15.S  syscalls.c  system_nrf54l15.c  wiring_analog.c  wiring_digital.c  wiring_time.c
hardware/nrf54l15/nrf54l15/examples/00.XIAO-BoardTests/BLEScanTest/: BLEScanTest.ino
hardware/nrf54l15/nrf54l15/examples/00.XIAO-BoardTests/Blink500ms/: Blink500ms.ino
hardware/nrf54l15/nrf54l15/examples/00.XIAO-BoardTests/I2CScannerXiao/: I2CScannerXiao.ino
hardware/nrf54l15/nrf54l15/examples/00.XIAO-BoardTests/SPILoopback/: SPILoopback.ino
hardware/nrf54l15/nrf54l15/examples/00.XIAO-BoardTests/Serial1Loopback/: Serial1Loopback.ino
hardware/nrf54l15/nrf54l15/examples/01.Basics/AnalogRead/: AnalogRead.ino
hardware/nrf54l15/nrf54l15/examples/01.Basics/Blink/: Blink.ino
hardware/nrf54l15/nrf54l15/examples/01.Basics/Button/: Button.ino
hardware/nrf54l15/nrf54l15/examples/01.Basics/Fade/: Fade.ino
hardware/nrf54l15/nrf54l15/examples/02.Analog/AnalogRead/: AnalogRead.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/I2CRegisterRead/: I2CRegisterRead.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/I2CScanner/: I2CScanner.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/I2CTargetCallbacks/: I2CTargetCallbacks.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/SPIBurstTransfer/: SPIBurstTransfer.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/SPIDigitalPot/: SPIDigitalPot.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/SPILoopback/: SPILoopback.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/SerialBridge01/: SerialBridge01.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/SerialConfig/: SerialConfig.ino
hardware/nrf54l15/nrf54l15/examples/02.Communication/SerialEcho/: SerialEcho.ino
hardware/nrf54l15/nrf54l15/examples/02.Digital/DebugBlink/: DebugBlink.ino
hardware/nrf54l15/nrf54l15/libraries/Bluetooth/: library.properties
hardware/nrf54l15/nrf54l15/libraries/IEEE802154/: library.properties
hardware/nrf54l15/nrf54l15/libraries/Watchdog/: library.properties
hardware/nrf54l15/nrf54l15/libraries/XiaoNrf54L15/: library.properties
hardware/nrf54l15/nrf54l15/tools/: build_zephyr_lib.py  get_nrf_connect.py  get_toolchain.py  link_zephyr_arduino.py  report_size.py  toolchain-ar  toolchain-ar.cmd  toolchain-gcc  toolchain-gcc.cmd  toolchain-gpp  toolchain-gpp.cmd  toolchain-objcopy  toolchain-objcopy.cmd  toolchain-size  toolchain-size.cmd  toolchain_exec.py  upload.py  upload_wrapper.sh  zephyr_common.py
hardware/nrf54l15/nrf54l15/variants/xiao_nrf54l15/: pins_arduino.h  variant.cpp
hardware/nrf54l15/nrf54l15/zephyr/arduino_base/: prj.conf
hardware/nrf54l15/nrf54l15/zephyr/conf/: bt_channel_sounding.conf
(+189 files in other folders)
